Spell checking and minor tweaks.

--- a/paper/background.tex
+++ b/paper/background.tex
@@ -336,7 +336,7 @@ the Alms language but has the advantage that the soundness results (type
 safety and parametricity) have been entirely mechanised in Coq.
 
 \citeauthor{Gay:2001:FFP}~\cite{Gay:2001:FFP} provides a $\pi$-calculus
-framework mechanised in Isabelle/HOL. The aim is to build a mechanisaton of
+framework mechanised in Isabelle/HOL. The aim is to build a mechanisation of
 session-based type systems on top of the $\pi$-calculus framework. The use of
 de Bruijn indices for both bound and free variables causes issues with
 variable substitution often requiring permutation of typing environments
