--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -3,11 +3,11 @@
 The current paper presented work towards a formalisation of
 \citeauthor{Wadler:2014}'s two-tier GV/CP system. The Coq development defines
 the process calculus CP and the functional language GV using state-of-the-art
-techniques from the programming language and interactivee theorem proving
+techniques from the programming language and interactive theorem proving
 communities. Proof of subject reduction for CP has been formalised along with
-work towards proving sound both cut elimination and the GV to CP CPS
+work towards formalising both cut elimination and the GV to CP CPS
 translation. While ultimately there remains work to be done to complete the
 development, several issues and guidelines have been identified to be
 considered by future endeavours in the area. Finally, some ideas for future
-work, on GV/CP specifically but also generally in the area of session-based
-type system formalisations, were proffered.
+work on GV/CP specifically but also generally in the area of session-based
+type system formalisations were proffered.
