--- a/paper/background.tex
+++ b/paper/background.tex
@@ -130,7 +130,7 @@ freedom from deadlock in session-based communication for the process
 calculus. The correspondence of session types to linear logic propositions is
 an important step in providing a solid logical foundation for a concurrent
 type theory; in the same way ``sequential'' type theory ($\lambda$-calculi)
-profitted from a logical perspective. However, for session types to become a
+profited from a logical perspective. However, for session types to become a
 more usable tool for programming distributed communication systems (the
 ultimate goal, of course, is to write more correct programs), one cannot be
 expected to program directly in the $\pi$-calculus; a more mainstream
