Acknowledgments -> Acknowledg*e*ments

--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,5 +1,5 @@
 \\~\\
-{\bf Acknowledgments.} Thanks to Simon Gay, my supervisor, for his advice
+{\bf Acknowledgements.} Thanks to Simon Gay, my supervisor, for his advice
 project-related and otherwise; Philip Wadler for provision of the GV/CP
 figures and discussions on this work; the other members of the ABCD Scotland
 clan for their comments and suggestions; and James McKinna for suggesting the
