--- a/paper/presentation.tex
+++ b/paper/presentation.tex
@@ -45,21 +45,26 @@ session-based type systems. many systems build on top of previous work adding
 more complex features such as asynchronous, polymorphic and recursive session
 types. extending informal proofs is error-prone and difficult because it is
 not always clear which parts of a system's metatheory is affected by a
-change. a formalised system would be interesting to consider. the community
-would benefit from a formalised system to aid extension and reduce likelihood
-of errors in the proofs.
+change. a formalised system would aid extension and reduce likelihood
+of errors in the proofs since the theorem prover would highlight the effects
 
 recent work has provided a logical foundation for understanding session
-types. session types correspond to classical linear logic connectives. where
-negation in the logic corresponds to the dual property of a session
-type. [present example slide of the connectives in classical linear logic and
-  their session type interpretation]. the formalisation i will describe today
-regards this connection, the system GV/CP originally described by Phil Wadler
-was the aim of this project to mechanise it. it provides a basis for further
-additions and also provides some properties that may be desirable such as
-deadlock freedom. the formalisation provides a means to gain more confidence
-in the proofs but also assists in extending them to account for the effects of
-additions.
+types. Wadler's work on the CP/GV system describes a two-tier type system with
+session types. [present it on screen.what?] the process calculus CP interprets
+linear logical connectives as session types and the surface functional
+language GV can be translated into CP. The system enjoys freedom from
+deadlock. surface language.
+
+session types correspond to classical linear logic connectives. where negation
+in the logic corresponds to the dual property of a session type. [present
+  example slide of the connectives in classical linear logic and their session
+  type interpretation]. the formalisation i will describe today regards this
+connection, I will present work towards a formalisation of the system GV/CP
+originally described by Phil Wadler was the aim of this project to mechanise
+it. it provides a basis for further additions and also provides some
+properties that may be desirable such as deadlock freedom. the formalisation
+provides a means to gain more confidence in the proofs but also assists in
+extending them to account for the effects of additions.
 
 \begin{comment}
 whats the problem
