--- a/paper/presentation.tex
+++ b/paper/presentation.tex
@@ -23,9 +23,6 @@
 \titlepage
 \end{frame}
 
-\begin{frame}
-Hand-written (informal) proofs $=$ Error-prone $+$ Difficult to update
-\end{frame}
 
 today i am going to talk about a formalisation effort based on an existing
 type system whose properties have previously only been studied
@@ -35,30 +32,83 @@ becoming increasingly prevalent in modern society. two: the correct
 functioning of these systems hinges on the protocol between any two
 communicating agents to be well-defined and correctly implemented.
 
+\begin{frame}
+Session types by example
+\end{frame}
+
 one approach to achieve such correctness guarantees is by using binary session
 types. [INTRODUCE BINARY SESSION TYPES HERE]. specifying a communication
 protocol then involves providing mutual dual types to the communicating
 parties. [a simple example with two processes is displayed].
+
+\begin{frame}
+Hand-written (informal) proofs $=$ Error-prone $+$ Difficult to update
+\end{frame}
 
 there has been a lot of activity in this area producing a variety of different
 session-based type systems. many systems build on top of previous work adding
 more complex features such as asynchronous, polymorphic and recursive session
 types. extending informal proofs is error-prone and difficult because it is
 not always clear which parts of a system's metatheory is affected by a
-change. a formalised system would aid extension and reduce likelihood
-of errors in the proofs since the theorem prover would highlight the effects
+change. a formalised system would reduce likelihood of errors in the proofs
+and aid extension since the theorem prover would highlight changes to the
+metatheory
 
-recent work has provided a logical foundation for understanding session
-types. Wadler's work on the CP/GV system describes a two-tier type system with
-session types. [present it on screen.what?] the process calculus CP interprets
-linear logical connectives as session types and the surface functional
-language GV can be translated into CP. The system enjoys freedom from
-deadlock. surface language.
+\begin{frame}
+CP - process calculus with operators from classical linear logic
+GV - functional language with session type
+CP -> GV translation (interprets classical linear logic operators as session
+types)
+\end{frame}
 
-session types correspond to classical linear logic connectives. where negation
-in the logic corresponds to the dual property of a session type. [present
-  example slide of the connectives in classical linear logic and their session
-  type interpretation]. the formalisation i will describe today regards this
+the formalisation i present here is based on recent work providing a logical
+foundation for understanding session types. in particular i present work
+towards a formalisation of Wadler's original CP/GV system which describes a
+two-tier type system with session types. A high-level overview of the system
+is as follows: we have a process calculus CP with operators from classical
+linear logic, a high-level functional language GV with session types, and a
+translation from GV to CP which interprets operators in classical linear logic
+as session types.
+
+\begin{frame}
+an example of CP classical linear logic operators and their session type
+interpretation
+\end{frame}
+
+by classical linear logic i mean a logic where negation is an involution which
+restricts the use of certain rules on resources, namely that all linear
+resources must be used (corresponding to prohibiting weakening) and that one
+cannot duplicate a linear resource (corresponding to contraction). some
+operators in the CP calculus are presented. the interpretation of tensor
+product is output of A and continue as B. The dual of this is input of A and
+continue as the negation of B. Thus negation in classical linear logic
+corresponds to session duality.
+
+\begin{frame}
+an example of GV and a translation???
+\end{frame}
+
+GV has built-in support for session types. consider the rule for sending a
+value of type T along a channel N of type !T.S. the translation to CP is
+presented. blah blah something about the session types being a little odd or
+overlook this probably
+
+\begin{frame}
+- subject reduction of CP
+- top-level cut elimination
+- translation preserving well-typedness
+\end{frame}
+
+the system has three main properties. subject reduction of CP, top-level
+cut-elimination and translation preserving well-typedness. One out of the
+three has been formalised and some issues and guidelines have been developed
+accordingly. some comments on progress towards the other two is offered
+
+The system
+enjoys freedom from deadlock cut elimination in CP corresponds to
+communication in GV.
+
+the formalisation i will describe today regards this
 connection, I will present work towards a formalisation of the system GV/CP
 originally described by Phil Wadler was the aim of this project to mechanise
 it. it provides a basis for further additions and also provides some
