Some boilerplate for slides.

--- a/paper/presentation.tex
+++ b/paper/presentation.tex
@@ -107,12 +107,24 @@ accordingly. some comments on progress towards the other two is offered
 The system enjoys freedom from deadlock cut elimination in CP corresponds to
 communication in GV.
 
+\begin{frame}
+subject reduction
+\end{frame}
+
 subject reduction is formalised using a relation on processes
+
+\begin{frame}
+problems for cut elimination
+\end{frame}
 
 cut elimination is not currently proven since we require a termination measure
 on the length of a derivation and a relationship between the subprocesses of a
 cut. other work based on formalising logics where the derivations are explicit
 may be inspirational
+
+\begin{frame}
+problems of the translation
+\end{frame}
 
 the translation seems to require a duplication of the specifications for cp
 and gv typing rules not done
