--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,6 +1,6 @@
 \\~\\
 {\bf Acknowledgements.} Thanks to Simon Gay, my supervisor, for his advice
-project-related and otherwise; Philip Wadler for provision of the GV/CP
+project-related and otherwise; Philip Wadler for provision of the CP/GV
 figures and discussions on this work; the other members of the ABCD Scotland
 clan for their comments and suggestions; and James McKinna for suggesting the
 use of the graph relation ``trick'' and other feedback on this work.
