--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
 
 The current paper presented work towards a formalisation of
-\citeauthor{Wadler:2014}'s two-tier GV/CP system. The Coq development defines
+\citeauthor{Wadler:2014}'s two-tier CP/GV system. The Coq development defines
 the process calculus CP and the functional language GV using state-of-the-art
 techniques from the programming language and interactive theorem proving
 communities. Proof of subject reduction for CP has been formalised along with
@@ -9,5 +9,5 @@ work towards formalising both cut elimination and the GV to CP CPS
 translation. While ultimately there remains work to be done to complete the
 development, several issues and guidelines have been identified to be
 considered by future endeavours in the area. Finally, some ideas for future
-work on GV/CP specifically but also generally in the area of session-based
+work on CP/GV specifically but also generally in the area of session-based
 type system formalisations were proffered.
